# Learning_LeWorldModel

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
baseline_algorithms/: run_baseline_example.py
drafts/: try_modal.py
lejepa/: encoder.py  eval_classifier.py  fig_gen.py  gen_readme_figs.py  predictor.py  train_classifier.py  train_representaions.py  utils.py  viz_projections.py
lewm/: check_encoder.py  decoder.py  encoder.py  params.py  planning.py  predictor.py  reward_predictor.py  run_atari.py  run_mujoco.py  sigreg.py  train.py  train_decoder.py  train_jepa.py  train_latent_ppo.py  train_reward_predictor.py  train_world_model.py  utils.py  viz_latent_state.py  viz_projections.py  viz_reward.py
rl_environments/: run_env.py
