[project]
name = "learning-lewm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[box2d]>=0.29.1",
    "modal>=1.4.3",
    "opencv-python>=4.13.0.92",
    "pygame>=2.6.1",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["lewm*", "lejepa*"]
